<resources>
    <string name="app_name">GAMunity</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="view_pager">View Pager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view">Text View</string>
    <string name="button">Button</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="create_forum">Create forum</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="members">Members</string>
    <string name="admin">Admin</string>
    <string name="member_name">Member Name</string>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="owned">Owned</string>
    <string name="cancel">Cancel</string>
    <string name="unjoin">Unjoin</string>
    <string name="add_post_description">Description</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="edit_forum">Edit Forum</string>
    <string name="member">Member</string>
    <string name="notification_chanel">Notification Chanel</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="moderator">Moderator</string>
    <string name="search_user">Search User</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="delete_account">Delete account</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="forum_list">Forum List</string>
    <string name="user_profile">User Profile</string>
    <string name="follow">Follow</string>
</resources>