<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".components.views.forum.CreateForumView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="292dp"
            android:layout_height="54dp"
            android:background="@drawable/app_icon"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/back_icon_foreground"
                    android:importantForAccessibility="no">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_forum"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/submitBtn"
                    android:rotation="-45"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/send_icon_foreground"
                    android:importantForAccessibility="no">
                </ImageView>

            </LinearLayout>
            
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <ImageView
                android:id="@+id/forumBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rectangle_shadow"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/forumIconImageBtn"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center|bottom"
                android:background="@drawable/rounded_pill_white_stroke"
                android:importantForAccessibility="no"
                android:src="@drawable/camera_icon_foreground"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/forumBackgroundImageBtn"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:importantForAccessibility="no"
                android:src="@drawable/camera_icon_foreground"
                tools:ignore="ImageContrastCheck" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forumNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <EditText
                android:id="@+id/forumName"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_pill_purple_stroke"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forumDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <EditText
                android:id="@+id/forumDescription"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_pill_purple_stroke"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forumCategoriesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <EditText
                android:id="@+id/forumCategories"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_pill_purple_stroke"
                android:ems="10"
                android:hint="@string/categories"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/rectangle_shadow">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginVertical="12dp"
                android:id="@+id/forumTagsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/members"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#757575"
                >

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_pill_purple_stroke"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="4dp">

                    <TextView
                        android:id="@+id/forumAdminName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/member_name"
                        style="@style/TextAppearance.AppCompat.Subhead">

                    </TextView>

                    <TextView
                        android:id="@+id/forumRoleDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin"
                        android:textColor="#FF2C20"
                        style="@style/TextAppearance.AppCompat.Subhead">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/more_icon_foreground"
                        android:importantForAccessibility="no">
                    </ImageView>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        
    </LinearLayout>

</androidx.core.widget.NestedScrollView>