<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.views.forum.ForumMoreInfoView">

    <LinearLayout
        android:id="@+id/moreInfoTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/forumAppIcon"
            android:layout_gravity="center"
            android:layout_width="292dp"
            android:layout_height="54dp"
            android:background="@drawable/app_icon"
            android:importantForAccessibility="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/back_icon_foreground"
            android:id="@+id/returnBack"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moreInfoTop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/moreInfoForumTop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center">
                <ProgressBar
                    android:id="@+id/moreInfoProgressBar1"
                    android:indeterminateTint="#4900FF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:padding="10dp"/>
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/moreInfoIconImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    app:strokeWidth="3dp"
                    app:strokeColor="@android:color/darker_gray"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    tools:ignore="ImageContrastCheck"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/moreInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="Title"
                android:paddingHorizontal="10dp"/>

            <LinearLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:background="#c5c5c5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:background="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/moreInfoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:text="description of the forum"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="#c5c5c5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/category"
                    android:background="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/moreInfoCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:background="#c5c5c5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Admin"
                        android:textSize="20sp"
                        android:background="@color/white"
                        android:textStyle="bold"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/moreInfoAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:nestedScrollingEnabled="false"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/moderator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="#c5c5c5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/moderator"
                        android:textSize="20sp"
                        android:background="@color/white"
                        android:textStyle="bold"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/moreInfoModeratorList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:nestedScrollingEnabled="false"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="#c5c5c5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/member"
                        android:background="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/moreInfoMemberList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:nestedScrollingEnabled="false"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>