<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.views.forum.EditForumView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="292dp"
            android:layout_height="54dp"
            android:background="@drawable/app_icon"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/returnBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/back_icon_foreground"
                    android:importantForAccessibility="no">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_forum"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/editForumSubmitButton"
                    android:rotation="-45"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/send_icon_foreground"
                    android:importantForAccessibility="no">
                </ImageView>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/forumInfo"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_below="@id/forumTop">

            <ProgressBar
                android:id="@+id/editForumProgress1"
                android:indeterminateTint="#4900FF"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:visibility="visible"/>
            <ImageView
                android:id="@+id/forumBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                tools:ignore="ImageContrastCheck"/>
            <ImageView
                android:id="@+id/editForumBackgroundButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:importantForAccessibility="no"
                android:src="@drawable/camera_icon_foreground"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/editForumIconButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center|bottom"
                android:background="@drawable/rounded_pill_white_stroke"
                android:importantForAccessibility="no"
                android:src="@drawable/camera_icon_foreground"
                tools:ignore="ImageContrastCheck" />

            <ProgressBar
                android:id="@+id/editForumProgress2"
                android:indeterminateTint="#4900FF"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:visibility="visible"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/editForumIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center|bottom"
                app:strokeWidth="3dp"
                app:strokeColor="@android:color/darker_gray"
                app:shapeAppearanceOverlay="@style/circleImageView"
                tools:ignore="ImageContrastCheck"/>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forumNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <EditText
                android:id="@+id/editForumTitle"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_pill_purple_stroke"
                android:ems="10"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forumDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <EditText
                android:id="@+id/editForumDescription"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_pill_purple_stroke"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forumCategoriesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >

            <EditText
                android:id="@+id/editForumCategories"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rounded_pill_purple_stroke"
                android:ems="10"
                android:hint="@string/categories"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/rectangle_shadow">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginVertical="12dp"
                android:id="@+id/forumTagsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>